sort.basic.selection.AlgSelectionSort.scala.error
Erreur de compilation :
AlgSelectionSort:3: error: not found: value i
  var k = getValeur(i)
                    ^