sort.basic.selection.AlgSelectionSort.scala.code
def selectionSort() {
  var k = getValeur(i)
  for (i<- 0 to getNombreValeurs()-2){
    
    for (j<- i+1 to getNombreValeurs()-1){
      
      if (plusPetit(j,getValeur(i))){
        k = j
      } 
      
    }
    swap(k,i)
  }
}